[tool.poetry]
name = "techblogrankingjp"
version = "0.1.0"
description = ""
authors = ["m4neda <m4neda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pandas = "^1.2.0"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
