[tool.poetry]
name = "techblogrankingjp"
version = "0.1.0"
description = ""
authors = ["m4neda <m4neda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pandas = "^1.2.0"
ipython = "^7.19.0"
mypy = "^0.790"
feedparser = "^6.0.2"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
