[tool.poetry]
name = "techblogrankingjp"
version = "0.1.0"
description = ""
authors = ["m4neda"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
bs4 = "^0.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
